--- a/web/views/user/inicioUser.pug
+++ b/web/views/user/inicioUser.pug
@@ -5,4 +5,4 @@ block cuerpocontenido
         h2.text-center=inicio
         h3.text-center=nmbr
     div 
-        a(href="/") Inicio
+        a(href="/") salir
