--- a/web/views/login.pug
+++ b/web/views/login.pug
@@ -5,7 +5,7 @@ html(lang="es")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Credenciales
         link(rel="stylesheet", href="/css/bootstrap.css")
-        link(rel="stylesheet", href="/../../../css/style.css")
+        link(rel="stylesheet", href="/css/style.css")
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' crossorigin='anonymous')
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
