--- a/web/views/login.pug
+++ b/web/views/login.pug
@@ -18,6 +18,8 @@ html(lang="es")
       input#ap_paterno.form-control(type='text' placeholder='Ingrese su apellido paterno')
       label.form-label.m-3(for='ap_materno') Apellido materno
       input#ap_materno.form-control(type='text' placeholder='Ingrese su apellido materno')
+      label.form-label.m-3(for='usuario') Crea un usuario
+      input#usuario.form-control(type='text' placeholder='Ingrese su usuario')
       label.form-label.m-3(for='correo') Correo electr&oacute;nico
       input#correo.form-control(type='email' placeholder='Ingrese su correo electronico')
       label.form-label.m-3(for='password') Crea una contrase&ntilde;a
