--- a/web/views/login.pug
+++ b/web/views/login.pug
@@ -1,4 +1,5 @@
 doctype html
+doctype html
 html(lang="es")
     head
         meta(charset="UTF-8")
@@ -6,11 +7,10 @@ html(lang="es")
         title Credenciales
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
-        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' crossorigin='anonymous')
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
 .d-flex.justify-content-center.align-items-center.vh-100
-  form(style='width: 21rem; height: 34rem;')
+  form(style='width: 21rem; height: 39rem;')
     .m-3.mb-2
       label.form-label(for='nombre') Nombre
       input#nombre.form-control(type='text' placeholder='Ingrese su nombre')
