--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -10,5 +10,14 @@ h5{
 form{
     background-color: #fff;
     border-radius: 10%;
+    border-color: black;
+    text-align: center;
+}
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
     text-align: center;
 }
