--- a/web/views/layout/index.pug
+++ b/web/views/layout/index.pug
@@ -5,10 +5,14 @@ html(lang="es")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Mis configuraciones |
         link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
     body
         include header   
         include nav
-        main(class="mx-auto container mt-10 px-2")
-            block cuerpocontenido
+        include body
+        a(href="/logIn") Log In
+        |&nbsp; &nbsp; &nbsp;
+        a(href="/signIn") Sign In
+        include footer
