--- a/web/views/inicio.pug
+++ b/web/views/inicio.pug
@@ -1,4 +1,15 @@
-extends ./layout/index
-
-
-    
+doctype html
+html(lang="es")
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Mis configuraciones |
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
+        script(src="/js/bootstrap.bundle.js")
+        script(src="/js/pooper.min.js")
+    body
+        include ./layout/header.pug  
+        include ./layout/nav.pug
+        include ./layout/body.pug
+        include ./layout/footer.pug
