--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -6,5 +6,5 @@ header.navbar.bg-body-tertiary
     img.img-fluid.rounded(src='/img/n.jpg' alt='Bootstrap' width='60' heigt='80')
     form.d-flex(role='search')
       input.form-control.ms-2(type='search' placeholder='Buscar' aria-label='Search')
-      button.btn.btn-outline-success.ms-2(type='submit' href="/logIn") Ingresar
-      button.btn.btn-outline-success.ms-2(type='submit' href="/singIn") Registrar
+      a.btn.btn-outline-success.ms-2(href="/logIn") Ingresar
+      a.btn.btn-outline-success.ms-2(href="/signIn") Registrar
