--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -2,7 +2,8 @@
     color: black;
 }
 body{
-    background-color: #121759;
+
+    background: radial-gradient(circle, rgba(39,0,176,1) 9%, rgba(18,23,89,1) 64%); 
 }
 h5{
     text-align: center;
