--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -1,9 +1,5 @@
-.letra{
-    color: black;
-}
 body{
-
-    background: radial-gradient(circle, rgba(39,0,176,1) 9%, rgba(18,23,89,1) 64%); 
+    background: radial-gradient(circle, rgba(31,37,29,1) 9%, rgba(0,0,0,1) 60%); 
 }
 h5{
     text-align: center;
@@ -30,4 +26,14 @@ img{
 .btn.btn-primary{
     display: block;
     margin: auto;     
+}
+.nin{
+    background: radial-gradient(circle, rgba(209,0,0,1) 9%, rgba(138,2,2,1) 60%); 
+}
+.x{
+    background: rgb(37,209,0);
+    background: radial-gradient(circle, rgba(37,209,0,1) 9%, rgba(2,138,26,1) 60%); 
+}
+.p{
+    background: radial-gradient(circle, rgba(39,0,176,1) 9%, rgba(18,23,89,1) 64%); 
 }
