--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -1,11 +1,11 @@
 header.navbar.bg-body-tertiary
   .container-fluid
-    a.navbar-brand.letra.ms-5 GameStart
+    a.navbar-brand.letra.ms-5(href="/") GameStart
     a(href='/xbox')
       img.img-fluid.rounded(src='/img/xbox.jpg' width='40' height='40')
-    a(href='../../play.pug')
+    a(href='/play')
       img.img-fluid.rounded(src='/img/ps5.jpg' alt='Imagen de una PS5' width='40' height='40')
-    a(href='../../nin.pug')
+    a(href='/nin')
       img.img-fluid.rounded(src='/img/n.jpg' alt='Bootstrap' width='60' heigt='80')
     a.form.d-flex(role='search')
       input.form-control.ms-2(type='search' placeholder='Buscar' aria-label='Search')
