--- a/web/views/xbox.pug
+++ b/web/views/xbox.pug
@@ -8,6 +8,7 @@ html(lang="es")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
-    body
+    body(class='x')
         include ./layout/header.pug
         include ./layout/bXbox.pug
+        
