--- a/web/views/layout/nav.pug
+++ b/web/views/layout/nav.pug
@@ -1,3 +1,3 @@
 figure(class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800")
-    div(clss="pt-6 md:p-8 text-center md:text-left space-y-4 shadow-lg")
+    div(clss="pt-6 md:p-8 text-center md:text-left space-y-4 shadow-lg bg: black")
         p.text-center Nav
