--- a/web/views/play.pug
+++ b/web/views/play.pug
@@ -1,7 +1,14 @@
 doctype html
-html(lang="en")
+html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
+        title PLAY STATION 
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
+        script(src="/js/bootstrap.bundle.js")
+        script(src="/js/pooper.min.js")
+    body(class='p')
+        include ./layout/header.pug
+        include ./layout/bPlay.pug
+        
