--- a/web/views/layout/bPlay.pug
+++ b/web/views/layout/bPlay.pug
@@ -7,7 +7,7 @@
         h1 
         img.card-img-top(src='/img/ds.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
-          h5.card-title Dark Souls
+          h5.card-title Dark Souls 3
           p.card-text
             | $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
