--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -7,18 +7,18 @@
           h5.card-title Explora
           p.card-text
             | Encuentra varios productos relacionados al mundo del gaming y de la mejor calidad.
-          a.btn.btn-primary(href='#') Go somewhere
+          a.btn.btn-primary(href='/xbox') Busca nuestros titulos
     .col-md-4
       .card(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img2.jpg' alt='...')
         .card-body
           h5.card-title Juega
           p.card-text Prueba nuestro catalogo de videojuegos para que vvas grandes experiencias.
-          a.btn.btn-primary(href='#') Go somewhere
+          a.btn.btn-primary(href='#') Busca tu consola
     .col-md-4
       .card(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img3.jpg' alt='...')
         .card-body
           h5.card-title Accesible
           p.card-text Los mejores precios para que puedas adentrarte a mundos enormes e increibles.
-          a.btn.btn-primary(href='#') Go somewhere
+          a.btn.btn-primary(href='#') Unete 
