--- a/web/views/nin.pug
+++ b/web/views/nin.pug
@@ -11,4 +11,5 @@ html(lang="es")
     body(class='nin')
         include ./layout/header.pug
         include ./layout/bNin.pug
-        
+    footer
+        include ./layout/footer.pug        
