--- a/web/views/play.pug
+++ b/web/views/play.pug
@@ -11,4 +11,5 @@ html(lang="es")
     body(class='p')
         include ./layout/header.pug
         include ./layout/bPlay.pug
-        
+    footer
+        include ./layout/footer.pug       
