--- a/web/views/xbox.pug
+++ b/web/views/xbox.pug
@@ -11,4 +11,5 @@ html(lang="es")
     body(class='x')
         include ./layout/header.pug
         include ./layout/bXbox.pug
-        
+    footer
+        include ./layout/footer.pug
