--- a/web/views/inicio.pug
+++ b/web/views/inicio.pug
@@ -12,5 +12,5 @@ html(lang="es")
         include ./layout/header.pug  
         include ./layout/nav.pug
         include ./layout/body.pug
-    footer(class='f')
+    footer
         include ./layout/footer.pug
