--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -7,6 +7,8 @@ header.navbar.bg-body-tertiary
       img.img-fluid.rounded(src='/img/ps5.jpg' alt='Imagen de una PS5' width='40' height='40')
     a(href='/nin')
       img.img-fluid.rounded(src='/img/n.jpg' alt='Bootstrap' width='60' heigt='80')
+    a(href='/con')
+      img.img-fluid.rounded(src='/img/mando.jpg' alt='Bootstrap' width='40' heigt='40')
     a.form.d-flex(role='search')
       img.img-fluid.rounded(src='/img/carrito.jpg' alt='Imagen de una PS5' width='40' height='40')
       input.form-control.ms-2(type='search' placeholder='Buscar' aria-label='Search')
