--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -13,12 +13,121 @@
         img.card-img-top(src='/img/img2.jpg' alt='...')
         .card-body
           h5.card-title Juega
-          p.card-text Prueba nuestro catalogo de videojuegos para que vvas grandes experiencias.
-          a.btn.btn-primary(href='#') Busca tu consola
+          p.card-text Prueba nuestro catalogo de videojuegos para que vivas grandes experiencias.
+          a.btn.btn-primary(href='/con') Busca tu consola
     .col-md-4
       .card(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img3.jpg' alt='...')
         .card-body
           h5.card-title Accesible
           p.card-text Los mejores precios para que puedas adentrarte a mundos enormes e increibles.
-          a.btn.btn-primary(href='#') Unete 
+          a.btn.btn-primary(href='/signIn') Unete 
+
+  .row.p-5
+    h1 Checa nuestros productos de Play Station
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1
+        img.card-img-top(src='/img/gow.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title God of War 
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/tlu.jpg' alt='...' style='width: 10rem; height: 12rem;') 
+        .card-body
+          h5.card-title The last of Us
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/iss.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Infamous Second Son
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito 
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1
+        img.card-img-top(src='/img/consolap.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Play Station 5
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito 
+  .row.p-5
+    h1 Checa nuestros productos de Xbox 
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/ds1.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Dark Souls
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/gears.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Gears of War
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1
+        img.card-img-top(src='/img/halo.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Halo Infinite
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1
+        img.card-img-top(src='/img/consolax.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Xbox Series X 
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+  .row.p-5
+    h1 Checa nuestros productos de Nintendo
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/mario.jpg' alt='...' style='width: 9rem; height: 12rem;')
+        .card-body
+          h5.card-title Super Mario Odyssey
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/zelda.jpg' alt='...' style='width: 9rem; height: 12rem;')
+        .card-body
+          h5.card-title Leyend of Zelda: BOTW
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1 
+        img.card-img-top(src='/img/animal.jpg' alt='...' style='width: 9rem; height: 12rem;') 
+        .card-body
+          h5.card-title Animal crossing
+          p.card-text $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 22rem;')
+        h1
+        img.card-img-top(src='/img/consolan.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Nintendo Switch 
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/signIn') Añadir al carrito
