--- a/web/views/layout/bXbox.pug
+++ b/web/views/layout/bXbox.pug
@@ -3,7 +3,7 @@
 .container
   .row.p-5
     .col-md-4
-      .card(style='width: 16rem; height: 22rem;')
+      .card.ms-5(style='width: 16rem; height: 22rem;')
         h1 
         img.card-img-top(src='/img/ds1.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -12,7 +12,7 @@
             | $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-4
-      .card(style='width: 16rem; height: 22rem;')
+      .card.ms-5(style='width: 16rem; height: 22rem;')
         h1
         img.card-img-top(src='/img/halo.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -20,7 +20,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-4
-      .card(style='width: 16rem; height: 22rem;')
+      .card.ms-5(style='width: 16rem; height: 22rem;')
         h1 
         img.card-img-top(src='/img/gears.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -29,7 +29,7 @@
           a.btn.btn-primary(href='/signIn') Añadir al carrito
   .row.p-5
     .col-md-4
-      .card(style='width: 16rem; height: 22rem;')
+      .card.ms-5(style='width: 16rem; height: 22rem;')
         h1 
         img.card-img-top(src='/img/dse.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -38,7 +38,7 @@
             | $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-4
-      .card(style='width: 16rem; height: 22rem;')
+      .card.ms-5(style='width: 16rem; height: 22rem;')
         h1 
         img.card-img-top(src='/img/sky.jpg' alt='...' style='width: 10rem; height: 12rem;') 
         .card-body
