--- a/web/views/login.pug
+++ b/web/views/login.pug
@@ -15,5 +15,5 @@ html(lang="es")
       label.form-label.m-3(for='usuario') Usuario
       input#usuario.form-control(type='text' placeholder='Ingrese tu usuario')
       label.form-label.m-3(for='password') Contrase&ntilde;a
-      input#password.form-control(type='password' placeholder='Ingrese tu contraseña')
-      button.btn.btn-primary.m-3(type='button') Ingresar
+      input#password.form-control.mb-3(type='password' placeholder='Ingrese tu contraseña')
+      button.btn.btn-primary(type='button') Ingresar
