--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -1,7 +1,7 @@
 .container
   .row.p-5
     .col-md-4
-      .card(style='width: 18rem; height: 22rem;')
+      .card.ms-5(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img.jpg' alt='...')
         .card-body
           h5.card-title Explora
@@ -9,14 +9,14 @@
             | Encuentra varios productos relacionados al mundo del gaming y de la mejor calidad.
           a.btn.btn-primary(href='/xbox') Busca nuestros titulos
     .col-md-4
-      .card(style='width: 18rem; height: 22rem;')
+      .card.ms-5(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img2.jpg' alt='...')
         .card-body
           h5.card-title Juega
           p.card-text Prueba nuestro catalogo de videojuegos para que vivas grandes experiencias.
           a.btn.btn-primary(href='/con') Busca tu consola
     .col-md-4
-      .card(style='width: 18rem; height: 22rem;')
+      .card.ms-5(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img3.jpg' alt='...')
         .card-body
           h5.card-title Accesible
@@ -25,6 +25,7 @@
 
   .row.p-5
     h1 Checa nuestros productos de Play Station
+    h1
     .col-md-3
       .card(style='width: 16rem; height: 22rem;')
         h1
@@ -61,6 +62,7 @@
           a.btn.btn-primary(href='/signIn') Añadir al carrito 
   .row.p-5
     h1 Checa nuestros productos de Xbox 
+    h1
     .col-md-3
       .card(style='width: 16rem; height: 22rem;')
         h1 
@@ -97,6 +99,7 @@
           a.btn.btn-primary(href='/signIn') Añadir al carrito
   .row.p-5
     h1 Checa nuestros productos de Nintendo
+    h1
     .col-md-3
       .card(style='width: 16rem; height: 22rem;')
         h1 
