--- a/web/views/signin.pug
+++ b/web/views/signin.pug
@@ -23,5 +23,5 @@ html(lang="es")
       label.form-label.m-3(for='correo') Correo electr&oacute;nico
       input#correo.form-control(type='email' placeholder='Ingrese su correo electronico')
       label.form-label.m-3(for='password') Crea una contrase&ntilde;a
-      input#password.form-control(type='password' placeholder='Ingrese una contraseña')
-      button.btn.btn-primary.m-3(type='button') Registrar
+      input#password.form-control.mb-3(type='password' placeholder='Ingrese una contraseña')
+      button.btn.btn-primary(type='button') Registrar
