--- a/web/views/credenciales/login.pug
+++ b/web/views/credenciales/login.pug
@@ -16,4 +16,4 @@ html(lang="es")
       input#usuario.form-control(type='text' placeholder='Ingrese tu usuario')
       label.form-label.m-3(for='password') Contrase&ntilde;a
       input#password.form-control.mb-3(type='password' placeholder='Ingrese tu contraseña')
-      button.btn.btn-primary(type='button') Ingresar
+      button.btn.btn-primary(type='submit') Ingresar
