--- a/web/views/credenciales/signin.pug
+++ b/web/views/credenciales/signin.pug
@@ -24,4 +24,4 @@ html(lang="es")
       input#correo.form-control(type='email' placeholder='Ingrese su correo electronico')
       label.form-label.m-3(for='password') Crea una contrase&ntilde;a
       input#password.form-control.mb-3(type='password' placeholder='Ingrese una contraseña')
-      button.btn.btn-primary(type='button') Registrar
+      button.btn.btn-primary(type='submit') Registrar
