--- a/web/views/layout/bNin.pug
+++ b/web/views/layout/bNin.pug
@@ -1,3 +1,15 @@
+doctype html
+html(lang="es")
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title PLAY STATION 
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
+        script(src="/js/bootstrap.bundle.js")
+        script(src="/js/pooper.min.js")
+    body  
+    include header
 //- .col-ms-2(style='background-color: black')
 //-     h1 hola
 .container
