--- a/web/views/inicio.pug
+++ b/web/views/inicio.pug
@@ -1,16 +1,1 @@
-doctype html
-html(lang="es")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Mis configuraciones |
-        link(rel="stylesheet", href="/css/bootstrap.css")
-        link(rel="stylesheet", href="/css/style.css")
-        script(src="/js/bootstrap.bundle.js")
-        script(src="/js/pooper.min.js")
-    body
-        include ./layout/header.pug  
-        include ./layout/nav.pug
-        include ./layout/body.pug
-    footer
-        include ./layout/footer.pug
+extends ./layout/index
