Creacion de nueva rama y respaldo

--- a/web/views/layout/bConsolas.pug
+++ b/web/views/layout/bConsolas.pug
@@ -8,7 +8,7 @@ html(lang="es")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
-    body  
+    body(class='p')
     include header
 .container
   .row.p-5
