--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -1,12 +1,13 @@
+script(href="dom.js") 
 header.navbar.bg-body-tertiary
   .container
     a.navbar-brand.letra.ms-5(href="/") GameStart
-    a(href='/xbox')
-      img.img-fluid.rounded(src='/img/xbox.jpg' width='40' height='40')
-    a(href='/play')
-      img.img-fluid.rounded(src='/img/ps5.jpg' alt='Imagen de una PS5' width='40' height='40')
-    a(href='/nin')
-      img.img-fluid.rounded(src='/img/n.jpg' alt='Bootstrap' width='60' heigt='80')
+    a(href='/vid')
+      img.img-fluid.rounded(id='xbox' src='/img/xbox.jpg' width='40' height='40')
+    a(href='/vid')
+      img.img-fluid.rounded(id='play' src='/img/ps5.jpg' alt='Imagen de una PS5' width='40' height='40')
+    a(href='/vid')
+      img.img-fluid.rounded(id='nin' src='/img/n.jpg' alt='Bootstrap' width='60' heigt='80')
     a(href='/con')
       img.img-fluid.rounded(src='/img/mando.jpg' alt='Bootstrap' width='40' heigt='40')
     a.form.d-flex(role='search')
