--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -7,7 +7,7 @@
           h5.card-title Explora
           p.card-text
             | Encuentra varios productos relacionados al mundo del gaming y de la mejor calidad.
-          a.btn.btn-primary(href='/xbox') Busca nuestros titulos
+          a.btn.btn-primary(href='/vid') Busca nuestros titulos
     .col-md-4
       .card.ms-5(style='width: 18rem; height: 22rem;')
         img.card-img-top(src='/img/img2.jpg' alt='...')
