--- a/web/views/credenciales/signin.pug
+++ b/web/views/credenciales/signin.pug
@@ -4,13 +4,14 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Credenciales
+        title REGISTRAR
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
+a.btn-regresar(href='/') Regresar
 .d-flex.justify-content-center.align-items-center.vh-100
-  form(style='width: 21rem; height: 39rem;')
+  form(style='width: 21rem; height: 40rem;')
     .m-3.mb-2
       label.form-label(for='nombre') Nombre
       input#nombre.form-control(type='text' placeholder='Ingrese su nombre')
