--- a/web/views/credenciales/login.pug
+++ b/web/views/credenciales/login.pug
@@ -3,17 +3,19 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Credenciales
+        title INGRESAR
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
-
+a.btn-regresar(href='/') Regresar
 .d-flex.justify-content-center.align-items-center.vh-100
-  form(style='width: 21rem; height: 18rem;')
+  form(style='width: 21rem; height: 20rem;')
     .m-3.mb-2
       label.form-label.m-3(for='usuario') Usuario
       input#usuario.form-control(type='text' placeholder='Ingrese tu usuario')
       label.form-label.m-3(for='password') Contrase&ntilde;a
       input#password.form-control.mb-3(type='password' placeholder='Ingrese tu contraseña')
       button.btn.btn-primary(type='submit') Ingresar
+      label.form-label.m-3(for='usuario') ¿No tienes cuenta? 
+      a.u-full-width.button-primary.button(href='/sign') Registrate
