--- a/web/views/layout/bPlay.pug
+++ b/web/views/layout/bPlay.pug
@@ -11,8 +11,7 @@ html(lang="es")
         script(src="codigo.js")
     body(class='p')
     include header
-//- .col-ms-2(style='background-color: black')
-//-     h1 hola
+
 .container
   .row(style='gap: 2rem; padding: 20px;')
     each pro in productos
@@ -23,4 +22,4 @@ html(lang="es")
           .card-body
             h5.card-title=`${pro.nombre}`
             p.card-text=`${pro.precio.toFixed(2)}`
-            a.btn.btn-primary.input.agregar-carrito.mb-5(href='#' data-id='`${pro.id_producto}`') Añadir al carrito
+            a.btn.btn-primary(href='/log') Añadir al carrito
