--- a/web/views/layout/body.pug
+++ b/web/views/layout/body.pug
@@ -1,7 +1,7 @@
 .container
   .row.p-5
     .col-md-4
-      .card.ms-5(style='width: 18rem; height: 22rem;')
+      .card.ms-5(style='width: 18rem; height: 26rem;')
         img.card-img-top(src='/img/img.jpg' alt='...')
         .card-body
           h5.card-title Explora
@@ -9,14 +9,14 @@
             | Encuentra varios productos relacionados al mundo del gaming y de la mejor calidad.
           a.btn.btn-primary(href='/vid') Busca nuestros titulos
     .col-md-4
-      .card.ms-5(style='width: 18rem; height: 22rem;')
-        img.card-img-top(src='/img/img2.jpg' alt='...')
+      .card.ms-5(style='width: 18rem; height: 26rem;')
+        img.card-img-top(src='/img/img2.jpg' alt='...' style='height: 20rem;')
         .card-body
           h5.card-title Juega
           p.card-text Prueba nuestro catalogo de videojuegos para que vivas grandes experiencias.
           a.btn.btn-primary(href='/con') Busca tu consola
     .col-md-4
-      .card.ms-5(style='width: 18rem; height: 22rem;')
+      .card.ms-5(style='width: 18rem; height: 26rem;')
         img.card-img-top(src='/img/img3.jpg' alt='...')
         .card-body
           h5.card-title Accesible
@@ -27,7 +27,7 @@
     h1 Checa nuestros productos de Play Station
     h1
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1
         img.card-img-top(src='/img/gow.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -36,7 +36,7 @@
           a.btn.btn-primary(href='/signIn') Añadir al carrito
 
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/tlu.jpg' alt='...' style='width: 10rem; height: 12rem;') 
         .card-body
@@ -44,7 +44,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/iss.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -52,7 +52,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito 
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1
         img.card-img-top(src='/img/consolap.jpg' alt='...' style='width: 12rem; height: 12rem;')
         .card-body
@@ -64,7 +64,7 @@
     h1 Checa nuestros productos de Xbox 
     h1
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/ds1.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -73,7 +73,7 @@
             | $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/gears.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -81,7 +81,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1
         img.card-img-top(src='/img/halo.jpg' alt='...' style='width: 10rem; height: 12rem;')
         .card-body
@@ -89,7 +89,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1
         img.card-img-top(src='/img/consolax.jpg' alt='...' style='width: 12rem; height: 12rem;')
         .card-body
@@ -101,7 +101,7 @@
     h1 Checa nuestros productos de Nintendo
     h1
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/mario.jpg' alt='...' style='width: 9rem; height: 12rem;')
         .card-body
@@ -110,7 +110,7 @@
             | $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/zelda.jpg' alt='...' style='width: 9rem; height: 12rem;')
         .card-body
@@ -118,7 +118,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1 
         img.card-img-top(src='/img/animal.jpg' alt='...' style='width: 9rem; height: 12rem;') 
         .card-body
@@ -126,7 +126,7 @@
           p.card-text $00
           a.btn.btn-primary(href='/signIn') Añadir al carrito
     .col-md-3
-      .card(style='width: 16rem; height: 22rem;')
+      .card(style='width: 16rem; height: 24rem;')
         h1
         img.card-img-top(src='/img/consolan.jpg' alt='...' style='width: 12rem; height: 12rem;')
         .card-body
