--- a/web/views/layout/header.pug
+++ b/web/views/layout/header.pug
@@ -28,6 +28,7 @@ header.navbar.bg-body-tertiary
             a#vaciar-carrito.button.u-full-width(href='#') Vaciar Carrito
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
-    .two.columns 
+    .two.columns
+      h4 = nombre 
       a.btn.btn-outline-success.me-2(href="/log") Ingresar
       a.btn.btn-outline-success(href="/sign") Registrar
