Se agrega CRUD para editar crear y borrar

--- a/web/views/productos/index.pug
+++ b/web/views/productos/index.pug
@@ -1,11 +1,11 @@
 doctype html
 html
   head
-    title Productos
+    title Lista de Productos
     link(rel="stylesheet" href="/css/CRUDstyles.css")
   body
-    h1 Lista de Productos
-    a(href="/productos/crear") Nuevo Producto
+    h2 Lista de Productos
+    a(href="/productos/crear" class="nuevo-producto") Nuevo Producto
     table
       thead
         tr
@@ -16,14 +16,18 @@ html
           th Stock
           th Acciones
       tbody
-        each producto in productos
+        if productos && productos.length
+          each producto in productos
+            tr
+              td= producto.id_producto
+              td= producto.nombre
+              td= producto.id_categoria
+              td= producto.precio
+              td= producto.stock
+              td
+                a(href=`/productos/editar/${producto.id_producto}` class="editar") Editar
+                form(action=`/productos/eliminar/${producto.id_producto}` method="POST" style="display:inline;")
+                  button(type="submit" class="eliminar") Eliminar
+        else
           tr
-            td= producto.id_producto
-            td= producto.nombre
-            td= producto.id_categoria
-            td= producto.precio
-            td= producto.stock
-            td
-              a(href=`/productos/editar/${producto.id_producto}`) Editar
-              form(action=`/productos/eliminar/${producto.id_producto}` method="POST" style="display:inline;")
-                button(type="submit") Eliminar
+            td(colspan="6") No hay productos disponibles.
